--- a/CentroLuant/Views/Home/Index.cshtml
+++ b/CentroLuant/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     }
 
     .home-header-title {
-        font-size: 1.6rem;
+        font-size: 1.8rem;
         font-weight: 700;
         color: #0F172A;
         margin-bottom: 4px;
@@ -61,8 +61,8 @@
     .module-icon {
         width: 52px;
         height: 52px;
-        border-radius: 999px; /* círculo */
-        overflow: hidden; /* recorta lo que sobresalga */
+        border-radius: 999px; 
+        overflow: hidden; 
         background: #E0F2FE;
         flex-shrink: 0;
         display: flex;
@@ -165,9 +165,9 @@
         {
             <!-- Gestión de facturas-->
             <div class="col-lg-4 col-md-6">
-                <div class="module-card" onclick="location.href='@Url.Action("Index", "Cita")'">
+                <div class="module-card" onclick="location.href='@Url.Action("Index", "Factura")'">
                     <div class="module-icon">
-                        <i class="bi bi-calendar2-check"><img src="~/img/gestion-citas.jpg" class="module-icon"></i>
+                        <i class="bi bi-calendar2-check"><img src="~/img/facturacion.jpg" class="module-icon"></i>
                     </div>
                     <div>
                         <div class="module-title">Gestión de facturas</div>
